data - add loading icon + charts - prevent text select for mobile drag + smaller fonts on mobile

--- a/src/assets/css/vendors.scss
+++ b/src/assets/css/vendors.scss
@@ -66,8 +66,8 @@
   display: none !important;
 }
 
-.theme--light.v-icon.v-icon--disabled.color-white {
-  color: $color-white !important;
+.theme--light.v-icon.v-icon--disabled.color-transparent {
+  color: transparent !important;
 }
 
 .v-text-field--outlined fieldset {
